Clean up other instances where Tab WindowAndroid was being set to null.

BUG=657007

Review-Url: https://codereview.chromium.org/2426083002
Cr-Commit-Position: refs/heads/master@{#429048}

Former-commit-id: 410dd90a44cc3a0a7d805122df31f7e65f377aa7